--- a/src/main/resources/web/css/vcard.css
+++ b/src/main/resources/web/css/vcard.css
@@ -5,6 +5,21 @@
 	margin-right: 5px;
 }
 
+/* PIE */
+.height-footer {
+	height: 40px;
+}
+.footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	line-height: 40px;
+	background-color: #f5f5f5;
+	display: block;
+	text-align: center;
+}
+
 /* FOTO */
 .card {
 	/*margin-top: 20px;*/
